--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
 MAIL_USERNAME=care@superfinserv.com
-MAIL_PASSWORD=fossiljaipur
+MAIL_PASSWORD=Sport@1$
 MAIL_ENCRYPTION=ssl
 
 
