--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ config/mediclaim.php
 config/motor.php
 config/custom.php
 config/cred.php
+
+app/Providers/RouteServiceProvider.php
+app/Providers/ViewServiceProvider.php
