--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "artisaninweb/laravel-soap": "0.3.0.10",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -20,6 +21,7 @@
         "laravelcollective/html": "^6.2",
         "maatwebsite/excel": "^3.1",
         "meng-tian/async-soap-guzzle": "^0.2.5",
+        "mtownsend/xml-to-array": "^2.0",
         "nesbot/carbon": "^2.45",
         "nicolaslopezj/searchable": "^1.13",
         "owasp/csrf-protector-php": "^1.0",
